added validations , modified class models and added more class endpoints
